# video_player

./: .clang-format  CMakeLists.txt  README.md  camera_capturer_mac.cpp  camera_capturer_mac.h  camera_capturer_win.cpp  camera_capturer_win.h  capturer.h  encoder.cpp  encoder.h  gl_renderer.cpp  gl_renderer.h  h264_encoder.cpp  h264_encoder.h  mp4_recorder.cpp  mp4_recorder.h  node.cpp  node.h  pipeline.cpp  pipeline.h  recorder.h  renderer.h  rtsp_capturer.cpp  rtsp_capturer.h  shader_s.h  test.cpp  test_encode.cpp  video_frame.h  video_player.cpp  video_player.h
glad/: glad.c  glad.h
mediakit/: media_engine.cpp  media_engine.h
